# iam

./: .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  index.html  package.json  pyproject.toml  pytest.ini  report.html  requirements.txt
.github/workflows/: deploy.yml  runTest.yml
policies/: limit_to_read_only_iam_policy.json  s3_list_bucket.json
tests/AWS/: test_aws_policies.py
utils/: aws_handler.py
