[tool.poetry]
name = "qa-automation"
version = "0.1.0"
description = ""
authors = ["Urieah <urieah.avni@gmail>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
pytest = "^8.1.1"
assertpy = "^1.1"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
python-dateutil = "^2.9.0.post0"
boto3 = "^1.34.99"
regex = "^2024.5.15"
allure-pytest = "^2.13.5"
pytest-json-report = "^1.5.0"
docker = "^7.1.0"
argcomplete = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
